feat: Add Guest Top-up Testing Guide and integrate Cashfree SDK
- Created GUEST_TOPUP_TESTING_GUIDE.md for comprehensive testing scenarios and validation checks for the guest top-up feature.
- Updated package.json and package-lock.json to include cashfree-sdk dependency.
- Refactored AddMoney.tsx to redirect to Guest Top-up page with prefilled amount.
- Enhanced GuestTopup.tsx to handle form validation and submission for guest users.
- Implemented walletApi.ts to support guest user wallet top-up API call.
- Improved error handling and logging in paymentApi.ts and walletApi.ts.
- Adjusted API client configuration to support different environments.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=https://wenews.onrender.com/api
+VITE_API_BASE_URL=http://localhost:500/api
 
 # App Configuration
 VITE_APP_NAME=WeNews
