Fix authentication token storage and retrieval; resolve infinite redirect loop
- Updated userApi.ts to use STORAGE_KEYS for token and user data removal.
- Added AUTH_FIX_SUMMARY.md detailing the fix for 401 errors causing page reloads.
- Integrated TheNewsAPI.com into the frontend, creating types and services for news articles.
- Enhanced user display logic in AuthContext to load cached user data immediately.
- Fixed storage key mismatches across various services to ensure consistent authentication flow.
- Added comprehensive types for news articles and related entities in news.ts.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # API Configuration
 VITE_API_BASE_URL=http://localhost:500/api
 
+# External News API (TheNewsAPI.com)
+VITE_NEWS_API_KEY=your_news_api_key_here
+VITE_NEWS_API_BASE_URL=https://api.thenewsapi.com/v1
+
 # App Configuration
 VITE_APP_NAME=WeNews
 VITE_APP_VERSION=1.0.0
