--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
